프로토타입 수정 및 추가

--- a/src/components/button.html
+++ b/src/components/button.html
@@ -44,7 +44,18 @@ h2{margin-bottom:20px;font-size:30px}
 					<button type="button" class="btn primary full">Full Button</button>
 				</div>
 				<!-- //Button -->
+
+				<!-- row -->
+				<div class="btn-wrap">
+					<div class="btn-group">
+						<div class="btn primary sm">test</div>
+						<div class="btn primary sm">test</div>
+					</div>
+				</div>
 				
+				<br>
+
+				<!-- col -->
 				<div class="btn-wrap">
 					<div class="btn-group column">
 						<div class="btn primary sm">test</div>
@@ -52,6 +63,8 @@ h2{margin-bottom:20px;font-size:30px}
 						<div class="btn primary">test</div>
 					</div>
 				</div>
+
+
 				
 			</div>
 		</section>
