--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -52,6 +52,14 @@
                 <div id="parent" class="contents">
                     <div class="box a">
                         <ul>
+							<li>
+                                <span class="icon"><i class="ico back lg"></i></span>
+                                <span class="text">back</span>
+                            </li>
+							<li>
+                                <span class="icon"><i class="ico home lg"></i></span>
+                                <span class="text">home</span>
+                            </li>
                             <li>
                                 <span class="icon"><i class="ico arrow-right lg"></i></span>
                                 <span class="text">arrow-right</span>
