--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -22,6 +22,8 @@ $icon-size: (
         "height": 40px
     ),
     "file": (
+        "home": "home.svg",
+        "back": "back.svg",
         "arrow-right": "arrow-right.svg",
         "arrow-left": "arrow-left.svg",
         "star": "star.svg",
