--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,49 +5,49 @@ $url-path:   "../images/" !default;
 $url-common: ""+$url-path+"common/" !default;
 $url-ico:    $url-path + "icon/" !default;
 
-// light theme && dark theme
-$themes: (
-	// light : light모드 변수 선언
-	light: (
-		// button default
-		btn-color-default:  #fff,
-		btn-color-disabled: #333,
-		btn-border-default: #000,
-		btn-bg-default:     #000,
-		btn-bg-disabled:    #999,
-		// button type
-		btn-primary:        #0d6efd,
-		btn-secondary:      #198754,
-		btn-success:        #6610f2,
-		btn-info:           #0dcaf0,
-		btn-warning:        #ffc107,
-		btn-danger:         #dc3545,
-	),
-	// dark : dark모드 변수 선언
-	dark: (
+// // light theme && dark theme
+// $themes: (
+// 	// light : light모드 변수 선언
+// 	light: (
+// 		// button default
+// 		btn-color-default:  #fff,
+// 		btn-color-disabled: #333,
+// 		btn-border-default: #000,
+// 		btn-bg-default:     #000,
+// 		btn-bg-disabled:    #999,
+// 		// button type
+// 		btn-primary:        #0d6efd,
+// 		btn-secondary:      #198754,
+// 		btn-success:        #6610f2,
+// 		btn-info:           #0dcaf0,
+// 		btn-warning:        #ffc107,
+// 		btn-danger:         #dc3545,
+// 	),
+// 	// dark : dark모드 변수 선언
+// 	dark: (
 
-	),
-);
+// 	),
+// );
 
-:root {
-	@each $theme, $map in $themes {
-		@if($theme == light){  
-			@each $key, $submap in $map {
-				$value: map-get(map-get($themes, $theme), '#{$key}');
-				--#{$key}:#{$value};
-			}
-		}@else{
-			// &[data-theme="dark"] {
-			@media (prefers-color-scheme: dark) {
-				@each $key, $submap in $map {
-					$value: map-get(map-get($themes, $theme), '#{$key}');
-					--#{$key}:#{$value};
-				}
-			}
-		}
-	}
-}
+// :root {
+// 	@each $theme, $map in $themes {
+// 		@if($theme == light){  
+// 			@each $key, $submap in $map {
+// 				$value: map-get(map-get($themes, $theme), '#{$key}');
+// 				--#{$key}:#{$value};
+// 			}
+// 		}@else{
+// 			// &[data-theme="dark"] {
+// 			@media (prefers-color-scheme: dark) {
+// 				@each $key, $submap in $map {
+// 					$value: map-get(map-get($themes, $theme), '#{$key}');
+// 					--#{$key}:#{$value};
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 
-@function gc($variable) {
-	@return var(--#{$variable});
-};
+// @function gc($variable) {
+// 	@return var(--#{$variable});
+// };
