--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -8,6 +8,11 @@
 	&::-webkit-scrollbar {
 		display: none;
 	}
+	&.page{
+		ul{
+			flex-wrap:wrap;
+		}
+	}
 	ul {
 		position:relative;
 		display:flex;
