팝업 인클루드 파일 추가

--- a/src/components/button.html
+++ b/src/components/button.html
@@ -48,8 +48,8 @@ h2{margin-bottom:20px;font-size:30px}
 				<!-- row -->
 				<div class="btn-wrap">
 					<div class="btn-group">
-						<div class="btn primary sm">test</div>
-						<div class="btn primary sm">test</div>
+						<button type="button" class="btn primary sm">test</button>
+						<button type="button" class="btn primary sm">test</button>
 					</div>
 				</div>
 				
@@ -58,9 +58,9 @@ h2{margin-bottom:20px;font-size:30px}
 				<!-- col -->
 				<div class="btn-wrap">
 					<div class="btn-group column">
-						<div class="btn primary sm">test</div>
-						<div class="btn primary">test</div>
-						<div class="btn primary">test</div>
+						<button type="button" class="btn primary sm">test</button>
+						<button type="button" class="btn primary">test</button>
+						<button type="button" class="btn primary">test</button>
 					</div>
 				</div>
 
