--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -15,6 +15,9 @@
 	opacity:0;
 	transition:height 0s .6s, padding 0s .6s, opacity .3s cubic-bezier(1, 0, 1, 1);
 	z-index:100;
+
+	@include popupType();
+	
 	&:before {
 		content:'';
 		position:absolute;
@@ -84,6 +87,8 @@
 			transform:translateY(100%);
 			transition:transform .5s;
 		}
+
+		@include popupType();
 	}
 	// type Drag Bottom Sheet
 	&.type-drag {
