--- a/src/components/layer_bot_popup.html
+++ b/src/components/layer_bot_popup.html
@@ -17,5 +17,15 @@
 <!-- confirm type02 -->
 <div class="layer-contents">
 	Content2<br>
+
+	<div class="bot-btn-fix">
+		<div class="btn-wrap">
+			<!-- column 클레스 적용하면 col 스타일 적용 -->
+			<div class="btn-group column">
+				<button type="button" class="btn primary xl">Primary</button>
+				<button type="button" class="btn xl">secondary</button>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- //confirm type02 -->
